--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 script:
   - make all
   - docker build -t dlangtour/core-dreg:latest .
+  - ./test.sh dlangtour/core-dreg:latest
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
