--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,3 +1,5 @@
+# Action to build, test and publish the Docker image
+# Uploading to Docker Hub only happens on changes to master
 name: default
 
 on:
@@ -10,11 +12,30 @@ on:
 jobs:
   main:
     name: Build and test image
+    if: github.repository == 'dlang-tour/core-dreg'
 
     steps:
+
+      # Fetch sources to build dependencies
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      # Fetch host compiler
+      - name: Install host LDC
+        uses: dlang-community/setup-dlang@v1
+        with:
+          compiler: ldc-latest
+
+      # Run make to build dreg and dver which are used in the Dockerfile
+      - name: Build dreg and dver
+        run: make all
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      # Login to DockerHub to push the generated image after the build
       - name: Login to DockerHub
         if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v1
@@ -22,18 +43,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      # Actually build the image based on the current context (not git revision!)
       - name: Build image
         uses: docker/build-push-action@v2
         with:
           push: ${{ github.event_name == 'push' }}
           load: ${{ github.event_name != 'push' }}
           tags: dlangtour/core-dreg:latest
+          context: .
 
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          submodules: true
-
+      # Verify the generated image
       - name: Run test.sh
         run: ./test.sh "dlangtour/core-dreg:latest"
 
