Add support for multiple files using HAR
Enables the generated image (used by "Run all compilers" on
`run.dlang.org`) to accept multiple files. This was already supported
for the other options.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ae"]
 	path = ae
 	url = https://github.com/CyberShadow/ae
+[submodule "har"]
+	path = har
+	url = https://github.com/marler8997/har
