ci: Add option to manually trigger the workflows
And update comments

--- a/.github/workflows/update_image.yml
+++ b/.github/workflows/update_image.yml
@@ -5,7 +5,10 @@
 name: update_image
 
 on:
-  # Run once peer week, i.e. every sunday
+  # Enable option to manually run the action:
+  workflow_dispatch:
+
+  # Run once peer week, i.e. every Sunday:
   schedule:
     - cron: 0 0 * * 0
 
