--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,8 +3,12 @@
 name: default
 
 on:
-  pull_request:
+  # Enable option to manually run the action:
+  workflow_dispatch:
 
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
@@ -15,8 +19,6 @@ jobs:
     if: github.repository == 'dlang-tour/core-dreg'
 
     steps:
-
-      # Fetch sources to build dependencies
       - name: Checkout repo
         uses: actions/checkout@v2
         with:
@@ -37,12 +39,15 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v2
         with:
+          # Only push the image when a commit is pushed to master
           push: ${{ github.event_name == 'push' }}
+
+          # Otherwise (in pull requests) Load the image when
           load: ${{ github.event_name != 'push' }}
           tags: dlangtour/core-dreg:latest
           context: .
 
-      # Verify the generated image
+      # Verify the image
       - name: Run test.sh
         run: ./test.sh "dlangtour/core-dreg:latest"
 
