--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   main:
     name: Build and test image
+    runs-on: ubuntu-latest
     if: github.repository == 'dlang-tour/core-dreg'
 
     steps:
@@ -35,20 +36,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      # Actually build the image based on the current context (not git revision!)
       - name: Build image
         uses: docker/build-push-action@v2
         with:
-          # Only push the image when a commit is pushed to master
-          push: ${{ github.event_name == 'push' }}
-
-          # Otherwise (in pull requests) Load the image when
-          load: ${{ github.event_name != 'push' }}
+          push: false
+          load: true
           tags: dlangtour/core-dreg:latest
           context: .
 
-      # Verify the image
-      - name: Run test.sh
+      - name: Verify the image
         run: ./test.sh "dlangtour/core-dreg:latest"
 
-    runs-on: ubuntu-latest
+      - name: Push image
+        uses: docker/build-push-action@v2
+        with:
+          push: ${{ github.event_name == 'push' }}
+          tags: dlangtour/core-dreg:latest
+          context: .
